images file name changed

--- a/Kamaldeep Singh/table.html
+++ b/Kamaldeep Singh/table.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -37,7 +38,7 @@ tr:nth-child(even) {
     <td>Singh</td>
     <td>CEO</td>
     <td>10,000$</td> 
- <td colspan = 2><img src="C:\Users\imgutil\Downloads\IMG_1031.jpeg" alt="" border=3 height=30 width=50></img></td>
+ <td colspan = 2><img src="Images/1.jpg" alt="" border=3 height=30 width=50></img></td>
     
   </tr>
   <tr>
