--- a/Sharine Joseph/index.html
+++ b/Sharine Joseph/index.html
@@ -1,1 +1,13 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Index</title>
+</head>
+<body>
+	<ul>
+	  <li>Coffee</li>
+	  <li>Tea</li>
+	  <li>Milk</li>
+	</ul>
+</body>
+</html>
