--- a/Sharine Joseph/table.html
+++ b/Sharine Joseph/table.html
@@ -39,7 +39,9 @@ tr:nth-child(even) {
     <td>Joseph</td>
     <td>MD</td>
     <td>10,000$</td> 
- 	<td colspan = 2><img src="images/1.jpg" alt="" border=3 height=30 width=50></td>
+ 	<td colspan = 2>
+ 		<img src="images/1.jpg" alt="" border=3 height=30 width=50>.
+ 	</td>
     
   </tr>
   <tr>
